# NIOdSR

./: README.md  new.txt
My_work/: textfile.txt
NIOdSR2/step_1/: .swp  README.md  main.cpp  rect
NIOdSR2/step_2/: Makefile  Tringle.cpp  zad2file
NIOdSR2/step_3/: CMakeLists.txt  Polygon.cpp  Rectangle.cpp  main.cpp
NIOdSR2/step_4/include/: Polygon.h  Rectangle.h  Tringle.h
NIOdSR2/step_4/src/: CMakeLists.txt  Polygon.cpp  Rectangle.cpp  Tringle.cpp  main.cpp
